<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <!--            <Button-->
<!--                android:id="@+id/help"-->
<!--                android:layout_width="74dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:text="Help"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/latitude"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/latitudeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:hint="@string/latitudeInput"
                android:inputType="numberSigned"
                android:textSize="20dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitude" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/longitude"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />

            <EditText
                android:id="@+id/longitudeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:hint="@string/longitudeInput"
                android:inputType="numberSigned"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitude" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/searchButton"
                app:layout_constraintTop_toBottomOf="@+id/longitudeInput"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myrecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchButton"
                tools:layout_editor_absoluteX="57dp">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/popout_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_gravity="start"
            android:fitsSystemWindows="true"

            app:headerLayout="@layout/charging_station_popout_header"
            app:menu="@menu/charging_station_activity_actions" />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>