<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bus_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/charging_station"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        app:srcCompat="@drawable/bus_icon" />

    <TextView
        android:id="@+id/movie_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/movie_info"
        app:layout_constraintEnd_toEndOf="@+id/movie_icon"
        app:layout_constraintStart_toStartOf="@+id/movie_icon"
        app:layout_constraintTop_toBottomOf="@+id/movie_icon" />

    <ImageView
        android:id="@+id/movie_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="@+id/bus_icon"
        app:layout_constraintStart_toStartOf="@+id/bus_icon"
        app:layout_constraintTop_toBottomOf="@+id/bus_icon"
        app:srcCompat="@drawable/movie_icon" />

    <ImageView
        android:id="@+id/soccer_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="176dp"
        app:layout_constraintEnd_toEndOf="@+id/charging_station"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/charging_station"
        app:layout_constraintTop_toBottomOf="@+id/charging_station"
        app:srcCompat="@drawable/soccer_court_icon" />

    <TextView
        android:id="@+id/bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bus"
        app:layout_constraintBottom_toTopOf="@+id/movie_icon"
        app:layout_constraintEnd_toStartOf="@+id/car_charging"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bus_icon"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/car_charging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/car_charging"
        app:layout_constraintBottom_toTopOf="@+id/soccer_icon"
        app:layout_constraintEnd_toEndOf="@+id/charging_station"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toEndOf="@+id/bus"
        app:layout_constraintStart_toStartOf="@+id/charging_station"
        app:layout_constraintTop_toBottomOf="@+id/charging_station"
        app:layout_constraintVertical_bias="0.123" />

    <ImageView
        android:id="@+id/charging_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bus_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        app:srcCompat="@drawable/charging_station" />

    <TextView
        android:id="@+id/id_soccer_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/soccer_game"
        app:layout_constraintEnd_toEndOf="@+id/soccer_icon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/movie_info"
        app:layout_constraintStart_toStartOf="@+id/soccer_icon"
        app:layout_constraintTop_toBottomOf="@+id/soccer_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>